gemini - чарт наложенных цен - без @Transient